メイン画面レイアウト作成

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -10,7 +10,7 @@
           </li>
           <li>
             <a routerLink="#" style="margin-right: 30px">
-              ニュース
+              Events
             </a>
           </li>
         </ul>
@@ -92,6 +92,19 @@
           </li>
         </ul>
       </div>
+      <div class="reserve-btn">
+        <a routerLink="/" class="btn-reservation">
+          Reservation
+        </a>
+      </div>
     </div>
   </div>
 </div>
+
+<div id="index-body">
+  <app-index></app-index>
+</div>
+
+<footer>
+  ©️2019 Cafe Project Co.,Ltd
+</footer>
