--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,5 +1,10 @@
 #top.header {
-  position: relative;
+  position: fixed;
+  top: 0;
+  background-color: white;
+  width: 100%;
+  height: 180px;
+  border-bottom: 1px solid #efefef;
 }
 
 #header1 {
@@ -48,7 +53,7 @@ ul.members-menu li {
 
 div#header2 {
   width: 1200px;
-  height: 150px;
+  height: 134px;
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -74,6 +79,29 @@ li.sep {
   cursor: default;
 }
 
+div.reserve-btn {
+  margin-left: auto;
+}
+
+div.reserve-btn a.btn-reservation {
+  border-radius: 20px;
+  background-color: mediumslateblue;
+  color: white;
+  padding: 10px;
+  box-shadow: 0 8px 15px rgba(0, 1, 1, 0.1);
+}
+
+div#index-body {
+  margin-top: 180px;
+}
+
 .clear-both {
   clear: both;
+}
+
+footer {
+  background-color: #f5f5f5;
+  border-top: 1px solid #646464;
+  text-align: center;
+  margin: 0 auto;
 }
