--- a/client/src/app/component/index/index.component.html
+++ b/client/src/app/component/index/index.component.html
@@ -7,7 +7,7 @@
   <div class="inner">
     <div class="pdt40 pdb40">
       <app-notice></app-notice>
-      <app-notice></app-notice>
+      <app-event></app-event>
     </div>
   </div>
 </div>
