--- a/client/src/app/component/index/index.component.html
+++ b/client/src/app/component/index/index.component.html
@@ -11,3 +11,11 @@
     </div>
   </div>
 </div>
+<div class="access-section pdb40">
+  <h2>
+    Access
+  </h2>
+  <section>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3186.5456828165093!2d127.10124581571746!3d36.99677627990847!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b3bf559ec79bd%3A0xbe4bc688b744b489!2z66-87ISg64SkIOyYt-yImOyEoA!5e0!3m2!1sko!2sjp!4v1568933618657!5m2!1sko!2sjp" width="600" height="450" style="border:0;" allowfullscreen=""></iframe>
+  </section>
+</div>
