Accessリンクイベント追加・開店時間追加

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -87,8 +87,8 @@
             <a routerLink="/">Menu</a>
           </li>
           <li class="sep">|</li>
-          <li>
-            <a routerLink="/">Access</a>
+          <li style="cursor: pointer">
+            <a (click)="scroll('access')">Access</a>
           </li>
         </ul>
       </div>
