--- a/client/src/app/component/index/index.component.css
+++ b/client/src/app/component/index/index.component.css
@@ -12,7 +12,7 @@ div.news-section .inner {
   width: 1200px;
   margin: 0 auto;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 div.access-section h2 {
@@ -23,8 +23,20 @@ div.access-section h2 {
 
 div.access-section section{
   display: flex;
+  flex-direction: column;
   justify-content: center;
   margin-top: 40px;
+}
+
+div.shop-info-container {
+  margin: 0 auto;
+}
+
+div.shop-info-container h3 {
+  margin-top: 20px;
+  background-color: #dfdfdf;
+  text-indent: 10px;
+  border-left: 5px solid deepskyblue;
 }
 
 .pdt40 {
