お知らせCRUD作成

--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -91,7 +91,7 @@ div.reserve-btn a.btn-reservation {
   box-shadow: 0 8px 15px rgba(0, 1, 1, 0.1);
 }
 
-div#index-body {
+div#src-body {
   margin-top: 180px;
 }
 
