--- a/client/src/app/component/notice/notice.component.html
+++ b/client/src/app/component/notice/notice.component.html
@@ -1,6 +1,6 @@
 <div class="news-wrapper">
   <h2>
-    News
+    Notice
     <span class="sub-description" style="margin-left: 10px">
             新着情報を確認してください。
           </span>
