--- a/client/src/app/component/index/index.component.css
+++ b/client/src/app/component/index/index.component.css
@@ -1,7 +1,8 @@
 div.main-img-area {
   width: 100%;
   height: 450px;
-  background-color: mediumseagreen;
+  background: center center no-repeat;
+  background-size: cover;
 }
 
 div.news-section {
