--- a/client/src/app/component/index/index.component.html
+++ b/client/src/app/component/index/index.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="main-img-area">
+  <div class="main-img-area" [ngStyle]="{'background-image':'url(' + mainImgUrl + ')'}">
 
   </div>
 </div>
