--- a/client/src/app/component/admin/news-edit/news-edit.component.html
+++ b/client/src/app/component/admin/news-edit/news-edit.component.html
@@ -20,6 +20,19 @@
                 required id="context" name="context">
       </textarea>
     </div>
+    <div class="form-group">
+      <label id="btn-image">
+        <span>画像添付</span>
+        <input (change)="processFile(imageInput)"
+               type="file" accept="image/*"
+               id="imgName" name="imgName" #imageInput>
+      </label>
+    </div>
+    <div *ngIf="selectedFile" class="img-preview-container">
+      <div class="img-preview"
+           [ngStyle]="{'background-image': 'url('+ selectedFile.src + ')'}">
+      </div>
+    </div>
     <div class="btn-group">
       <button id="btn-save" type="submit" [disabled]="!noticeForm.form.valid">
         保存
