--- a/client/src/app/component/admin/news-edit/news-edit.component.css
+++ b/client/src/app/component/admin/news-edit/news-edit.component.css
@@ -76,6 +76,12 @@ button {
   color: white;
 }
 
+#btn-cancel {
+  background-color: darkorange;
+  color: white;
+  width: 100px;
+}
+
 #btn-delete {
   background-color: palevioletred;
   color: white;
