イメージプレビューのサイズを大きくした

--- a/client/src/app/component/admin/news-edit/news-edit.component.css
+++ b/client/src/app/component/admin/news-edit/news-edit.component.css
@@ -96,6 +96,6 @@ button {
 .img-preview {
   background: center center no-repeat;
   background-size: contain;
-  height: 116px;
-  width: 116px;
+  height: 400px;
+  width: 100%;
 }
